added Audit Dashboard project

--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
           <div class="work__controls--title"><h1>Filters</h1></div>
           <div class="work__controls--buttons">
             <button class="work__control blue" data-filter="all">Show All</button>
-            <button class="work__control orange" data-filter=".front__end">Front-end</button>
-            <button class="work__control pink" data-filter=".full__stack">Full-stack</button>
             <button class="work__control yellow" data-filter=".data__analysis">
               Data Analysis
             </button>
+            <button class="work__control pink" data-filter=".full__stack">Full-stack</button>
+            <button class="work__control orange" data-filter=".front__end">Front-end</button>
           </div>
         </div>
 
@@ -379,6 +379,73 @@
           data-aos="zoom-in"
           data-aos-duration="1500"
           data-aos-once="true">
+          <div class="book mix data__analysis">
+            <div class="work__projectdesc--container">
+              <h1 class="work__projectdesc--title">Audit Overview</h1>
+              <p class="work__projectdesc--text">
+                Develop a dynamic Power BI dashboard to analyze audit tracker data, using Power
+                Query to transform the data. The dashboard visualizes metrics such as frequent
+                calls, outliers and average per team, with sample data for video demonstration.
+              </p>
+              <a href="views/trackerdashboard.html" class="work__projectdesc--link"
+                >Go to Project<i class="ri-arrow-right-fill"></i>
+              </a>
+            </div>
+            <div class="cover">
+              <div class="work__project--cover">
+                <img
+                  src="public/build/img/trackerdashboard-img.png"
+                  alt="project image"
+                  class="work__project--img" />
+                <h1 class="work__project--title">Audit Overview</h1>
+                <div class="work__project--techs">
+                  <p class="work__project--tech">Power BI</p>
+                  <p class="work__project--tech">Power Query</p>
+                  <p class="work__project--tech">Excel</p>
+                </div>
+                <div class="work__project--link">
+                  <img
+                    src="public/build/img/arrow-right.svg"
+                    alt="see description"
+                    class="work__project--icon" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="book mix data__analysis">
+            <div class="work__projectdesc--container">
+              <h1 class="work__projectdesc--title">Audit Tracker</h1>
+              <p class="work__projectdesc--text">
+                Developed an automated audit tracker during my internship at Concentrix using Excel
+                macros and VBA. The tool created a dynamic dashboard for real-time analysis,
+                filtering by week, evaluators, and team leaders, improving quality management
+                efficiency.
+              </p>
+              <a href="views/audittracker.html" class="work__projectdesc--link"
+                >Go to Project<i class="ri-arrow-right-fill"></i>
+              </a>
+            </div>
+            <div class="cover">
+              <div class="work__project--cover">
+                <img
+                  src="public/build/img/audittracker-img.png"
+                  alt="project image"
+                  class="work__project--img" />
+                <h1 class="work__project--title">Audit Tracker</h1>
+                <div class="work__project--techs">
+                  <p class="work__project--tech">Excel</p>
+                  <p class="work__project--tech">VBA</p>
+                  <p class="work__project--tech">Macros</p>
+                </div>
+                <div class="work__project--link">
+                  <img
+                    src="public/build/img/arrow-right.svg"
+                    alt="see description"
+                    class="work__project--icon" />
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="book mix full__stack">
             <div class="work__projectdesc--container">
               <h1 class="work__projectdesc--title">BizExpo</h1>
@@ -585,40 +652,6 @@
                   <p class="work__project--tech">SASS</p>
                   <p class="work__project--tech">WebPack</p>
                   <p class="work__project--tech">Figma</p>
-                </div>
-                <div class="work__project--link">
-                  <img
-                    src="public/build/img/arrow-right.svg"
-                    alt="see description"
-                    class="work__project--icon" />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="book mix data__analysis">
-            <div class="work__projectdesc--container">
-              <h1 class="work__projectdesc--title">Audit Tracker</h1>
-              <p class="work__projectdesc--text">
-                Developed an automated audit tracker during my internship at Concentrix using Excel
-                macros and VBA. The tool created a dynamic dashboard for real-time analysis,
-                filtering by week, evaluators, and team leaders, improving quality management
-                efficiency.
-              </p>
-              <a href="views/audittracker.html" class="work__projectdesc--link"
-                >Go to Project<i class="ri-arrow-right-fill"></i>
-              </a>
-            </div>
-            <div class="cover">
-              <div class="work__project--cover">
-                <img
-                  src="public/build/img/audittracker-img.png"
-                  alt="project image"
-                  class="work__project--img" />
-                <h1 class="work__project--title">Audit Tracker</h1>
-                <div class="work__project--techs">
-                  <p class="work__project--tech">Excel</p>
-                  <p class="work__project--tech">VBA</p>
-                  <p class="work__project--tech">Macros</p>
                 </div>
                 <div class="work__project--link">
                   <img
